Legger til map av opplæringspenger